@@ -68,16 +68,8 @@
 19536 memset_movnt_avx512f_clflush : src/debug/libpmem2/memset_nt_avx512f.su:memset_nt_avx512f.c dynamic,bounded
 19536 memset_movnt_avx512f_clflushopt : src/debug/libpmem/memset_nt_avx512f.su:memset_nt_avx512f.c dynamic,bounded
 19536 memset_movnt_avx512f_clflushopt : src/debug/libpmem2/memset_nt_avx512f.su:memset_nt_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_noflush : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_noflush : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_empty : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_empty : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_clwb : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_clwb : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_clflush : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_clflush : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_clflushopt : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
-19024 memset_mov_avx512f_clflushopt : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+18880 memset_mov_avx512f : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
+18880 memset_mov_avx512f : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
 16480 obj_vg_check_no_undef : src/debug/libpmemobj/obj.su:obj.c static
 13840 memmove_mov_avx_noflush : src/debug/libpmem/memcpy_t_avx.su:memcpy_t_avx.c dynamic,bounded
 13840 memmove_mov_avx_noflush : src/debug/libpmem2/memcpy_t_avx.su:memcpy_t_avx.c dynamic,bounded
@@ -155,16 +147,8 @@
 6768 memset_movnt_sse2_clflushopt_nobarrier : src/debug/libpmem2/memset_nt_sse2.su:memset_nt_sse2.c dynamic,bounded
 6768 memset_movnt_sse2_clflush_nobarrier : src/debug/libpmem/memset_nt_sse2.su:memset_nt_sse2.c dynamic,bounded
 6768 memset_movnt_sse2_clflush_nobarrier : src/debug/libpmem2/memset_nt_sse2.su:memset_nt_sse2.c dynamic,bounded
-5936 memset_mov_avx_noflush : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
-5936 memset_mov_avx_noflush : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
-5936 memset_mov_avx_empty : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
-5936 memset_mov_avx_empty : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
-5936 memset_mov_avx_clwb : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
-5936 memset_mov_avx_clwb : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
-5936 memset_mov_avx_clflush : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
-5936 memset_mov_avx_clflush : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
-5936 memset_mov_avx_clflushopt : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
-5936 memset_mov_avx_clflushopt : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+5856 memset_mov_avx : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c static
+5856 memset_mov_avx : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c static
 4384 pool_params_parse : src/debug/libpmempool/pool.su:pool.c dynamic,bounded
 4352 out_init : src/debug/libpmempool/out.su:out.c dynamic,bounded
 4352 out_init : src/debug/libpmem/out.su:out.c dynamic,bounded
@@ -1672,6 +1656,26 @@
 64 obj_replica_init : src/debug/libpmemobj/obj.su:obj.c static
 64 obj_pool_open : src/debug/libpmemobj/obj.su:obj.c dynamic,bounded
 64 obj_ctl_init_and_load : src/debug/libpmemobj/obj.su:obj.c dynamic,bounded
+64 memset_mov_avx_noflush : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx_noflush : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx_empty : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx_empty : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx_clwb : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx_clwb : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx_clflush : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx_clflush : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx_clflushopt : src/debug/libpmem/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx_clflushopt : src/debug/libpmem2/memset_t_avx.su:memset_t_avx.c dynamic,bounded
+64 memset_mov_avx512f_noflush : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+64 memset_mov_avx512f_noflush : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+64 memset_mov_avx512f_empty : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+64 memset_mov_avx512f_empty : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+64 memset_mov_avx512f_clwb : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+64 memset_mov_avx512f_clwb : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+64 memset_mov_avx512f_clflush : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+64 memset_mov_avx512f_clflush : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+64 memset_mov_avx512f_clflushopt : src/debug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
+64 memset_mov_avx512f_clflushopt : src/debug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c dynamic,bounded
 64 membuf_alloc : src/debug/libpmempool/membuf.su:membuf.c static
 64 membuf_alloc : src/debug/libpmemobj/membuf.su:membuf.c static
 64 membuf_alloc : src/debug/libpmem2/membuf.su:membuf.c static
