@@ -42,8 +42,6 @@
 4144 pmem2_deep_flush_write : src/nondebug/libpmem2/deep_flush_linux.su:deep_flush_linux.c static
 4144 pmem2_deep_flush_write : src/nondebug/common/deep_flush_linux.su:deep_flush_linux.c static
 4112 pool_set_type : src/nondebug/libpmempool/pool.su:pool.c static
-3840 memset_mov_avx512f_empty : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
-3840 memset_mov_avx512f_empty : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
 2144 util_map_hint_unused : src/nondebug/libpmempool/mmap_posix.su:mmap_posix.c static
 2144 util_map_hint_unused : src/nondebug/libpmemobj/mmap_posix.su:mmap_posix.c static
 2144 util_map_hint_unused : src/nondebug/libpmem/mmap_posix.su:mmap_posix.c static
@@ -51,8 +49,6 @@
 2016 memmove_mov_avx_empty : src/nondebug/libpmem/memcpy_t_avx.su:memcpy_t_avx.c static
 2016 memmove_mov_avx_empty : src/nondebug/libpmem2/memcpy_t_avx.su:memcpy_t_avx.c static
 1184 heap_init : src/nondebug/libpmemobj/heap.su:heap.c static
-1088 memset_mov_avx_empty : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
-1088 memset_mov_avx_empty : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
 1088 memmove_mov_sse2_empty : src/nondebug/libpmem/memcpy_t_sse2.su:memcpy_t_sse2.c static
 1088 memmove_mov_sse2_empty : src/nondebug/libpmem2/memcpy_t_sse2.su:memcpy_t_sse2.c static
 720 ulog_entry_buf_create : src/nondebug/libpmemobj/ulog.su:ulog.c dynamic
@@ -264,14 +260,8 @@
 192 memset_movnt_avx_clflushopt_nobarrier : src/nondebug/libpmem2/memset_nt_avx.su:memset_nt_avx.c static
 192 memset_movnt_avx_clflush_nobarrier : src/nondebug/libpmem/memset_nt_avx.su:memset_nt_avx.c static
 192 memset_movnt_avx_clflush_nobarrier : src/nondebug/libpmem2/memset_nt_avx.su:memset_nt_avx.c static
-192 memset_mov_avx512f_noflush : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
-192 memset_mov_avx512f_noflush : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
-192 memset_mov_avx512f_clwb : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
-192 memset_mov_avx512f_clwb : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
-192 memset_mov_avx512f_clflush : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
-192 memset_mov_avx512f_clflush : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
-192 memset_mov_avx512f_clflushopt : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
-192 memset_mov_avx512f_clflushopt : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
+192 memset_mov_avx512f : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
+192 memset_mov_avx512f : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
 192 memmove_movnt_avx512f_noflush : src/nondebug/libpmem/memcpy_nt_avx512f.su:memcpy_nt_avx512f.c static
 192 memmove_movnt_avx512f_noflush : src/nondebug/libpmem2/memcpy_nt_avx512f.su:memcpy_nt_avx512f.c static
 192 memmove_movnt_avx512f_clwb : src/nondebug/libpmem/memcpy_nt_avx512f.su:memcpy_nt_avx512f.c static
@@ -412,14 +402,8 @@
 128 pmem2_badblock_context_new : src/nondebug/libpmem2/badblocks_ndctl.su:badblocks_ndctl.c static
 128 pmem2_badblock_context_new : src/nondebug/common/badblocks_ndctl.su:badblocks_ndctl.c static
 128 pmalloc : src/nondebug/libpmemobj/pmalloc.su:pmalloc.c dynamic,bounded
-128 memset_mov_avx_noflush : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
-128 memset_mov_avx_noflush : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
-128 memset_mov_avx_clwb : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
-128 memset_mov_avx_clwb : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
-128 memset_mov_avx_clflush : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
-128 memset_mov_avx_clflush : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
-128 memset_mov_avx_clflushopt : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
-128 memset_mov_avx_clflushopt : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
+128 memset_mov_avx : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
+128 memset_mov_avx : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
 128 memblock_header_legacy_reinit : src/nondebug/libpmemobj/memblock.su:memblock.c static
 128 memblock_from_offset_opt : src/nondebug/libpmemobj/memblock.su:memblock.c static
 128 list_insert_new_user : src/nondebug/libpmemobj/list.su:list.c dynamic,bounded
@@ -1850,6 +1834,18 @@
 8 pmem_emit_log : src/nondebug/libpmem/pmem.su:pmem.c static
 8 pmem_drain : src/nondebug/libpmem/pmem.su:pmem.c static
 8 pmem_deep_drain : src/nondebug/libpmem/pmem.su:pmem.c static
+8 pmem_clwb : src/nondebug/libpmem/memset_t_avx.su:flush.h static
+8 pmem_clwb : src/nondebug/libpmem/memset_t_avx512f.su:flush.h static
+8 pmem_clwb : src/nondebug/libpmem2/memset_t_avx.su:flush.h static
+8 pmem_clwb : src/nondebug/libpmem2/memset_t_avx512f.su:flush.h static
+8 pmem_clflush : src/nondebug/libpmem/memset_t_avx.su:flush.h static
+8 pmem_clflush : src/nondebug/libpmem/memset_t_avx512f.su:flush.h static
+8 pmem_clflush : src/nondebug/libpmem2/memset_t_avx.su:flush.h static
+8 pmem_clflush : src/nondebug/libpmem2/memset_t_avx512f.su:flush.h static
+8 pmem_clflushopt : src/nondebug/libpmem/memset_t_avx.su:flush.h static
+8 pmem_clflushopt : src/nondebug/libpmem/memset_t_avx512f.su:flush.h static
+8 pmem_clflushopt : src/nondebug/libpmem2/memset_t_avx.su:flush.h static
+8 pmem_clflushopt : src/nondebug/libpmem2/memset_t_avx512f.su:flush.h static
 8 pmem2_vm_reservation_get_size : src/nondebug/libpmem2/vm_reservation.su:vm_reservation.c static
 8 pmem2_vm_reservation_get_address : src/nondebug/libpmem2/vm_reservation.su:vm_reservation.c static
 8 pmem2_region_get_next_badblock : src/nondebug/libpmempool/badblocks_ndctl.su:badblocks_ndctl.c static
@@ -2252,6 +2248,34 @@
 8 obj_norep_memcpy : src/nondebug/libpmemobj/obj.su:obj.c static
 8 obj_norep_drain : src/nondebug/libpmemobj/obj.su:obj.c static
 8 obj_drain_empty : src/nondebug/libpmemobj/obj.su:obj.c static
+8 noflush : src/nondebug/libpmem/memset_t_avx.su:memcpy_memset.h static
+8 noflush : src/nondebug/libpmem/memset_t_avx512f.su:memcpy_memset.h static
+8 noflush : src/nondebug/libpmem2/memset_t_avx.su:memcpy_memset.h static
+8 noflush : src/nondebug/libpmem2/memset_t_avx512f.su:memcpy_memset.h static
+8 noflush64b : src/nondebug/libpmem/memset_t_avx.su:memcpy_memset.h static
+8 noflush64b : src/nondebug/libpmem/memset_t_avx512f.su:memcpy_memset.h static
+8 noflush64b : src/nondebug/libpmem2/memset_t_avx.su:memcpy_memset.h static
+8 noflush64b : src/nondebug/libpmem2/memset_t_avx512f.su:memcpy_memset.h static
+8 memset_mov_avx_noflush : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx_noflush : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx_empty : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx_empty : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx_clwb : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx_clwb : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx_clflush : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx_clflush : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx_clflushopt : src/nondebug/libpmem/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx_clflushopt : src/nondebug/libpmem2/memset_t_avx.su:memset_t_avx.c static
+8 memset_mov_avx512f_noflush : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
+8 memset_mov_avx512f_noflush : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
+8 memset_mov_avx512f_empty : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
+8 memset_mov_avx512f_empty : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
+8 memset_mov_avx512f_clwb : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
+8 memset_mov_avx512f_clwb : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
+8 memset_mov_avx512f_clflush : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
+8 memset_mov_avx512f_clflush : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
+8 memset_mov_avx512f_clflushopt : src/nondebug/libpmem/memset_t_avx512f.su:memset_t_avx512f.c static
+8 memset_mov_avx512f_clflushopt : src/nondebug/libpmem2/memset_t_avx512f.su:memset_t_avx512f.c static
 8 memory_barrier : src/nondebug/libpmem/init.su:init.c static
 8 memory_barrier : src/nondebug/libpmem2/init.su:init.c static
 8 membuf_ptr_user_data : src/nondebug/libpmempool/membuf.su:membuf.c static
@@ -2302,12 +2326,32 @@
 8 hash64 : src/nondebug/libpmemobj/rand.su:rand.c static
 8 hash64 : src/nondebug/common/rand.su:rand.c static
 8 flush_empty : src/nondebug/libpmem/pmem.su:pmem.c static
+8 flush_empty_nolog : src/nondebug/libpmem/memset_t_avx.su:pmem2_arch.h static
+8 flush_empty_nolog : src/nondebug/libpmem/memset_t_avx512f.su:pmem2_arch.h static
+8 flush_empty_nolog : src/nondebug/libpmem2/memset_t_avx.su:pmem2_arch.h static
+8 flush_empty_nolog : src/nondebug/libpmem2/memset_t_avx512f.su:pmem2_arch.h static
 8 flush_clwb : src/nondebug/libpmem/init.su:init.c static
 8 flush_clwb : src/nondebug/libpmem2/init.su:init.c static
+8 flush_clwb_nolog : src/nondebug/libpmem/memset_t_avx.su:flush.h static
+8 flush_clwb_nolog : src/nondebug/libpmem/memset_t_avx512f.su:flush.h static
+8 flush_clwb_nolog : src/nondebug/libpmem2/memset_t_avx.su:flush.h static
+8 flush_clwb_nolog : src/nondebug/libpmem2/memset_t_avx512f.su:flush.h static
 8 flush_clflush : src/nondebug/libpmem/init.su:init.c static
 8 flush_clflush : src/nondebug/libpmem2/init.su:init.c static
 8 flush_clflushopt : src/nondebug/libpmem/init.su:init.c static
 8 flush_clflushopt : src/nondebug/libpmem2/init.su:init.c static
+8 flush_clflushopt_nolog : src/nondebug/libpmem/memset_t_avx.su:flush.h static
+8 flush_clflushopt_nolog : src/nondebug/libpmem/memset_t_avx512f.su:flush.h static
+8 flush_clflushopt_nolog : src/nondebug/libpmem2/memset_t_avx.su:flush.h static
+8 flush_clflushopt_nolog : src/nondebug/libpmem2/memset_t_avx512f.su:flush.h static
+8 flush_clflush_nolog : src/nondebug/libpmem/memset_t_avx.su:flush.h static
+8 flush_clflush_nolog : src/nondebug/libpmem/memset_t_avx512f.su:flush.h static
+8 flush_clflush_nolog : src/nondebug/libpmem2/memset_t_avx.su:flush.h static
+8 flush_clflush_nolog : src/nondebug/libpmem2/memset_t_avx512f.su:flush.h static
+8 flush64b_empty : src/nondebug/libpmem/memset_t_avx.su:flush.h static
+8 flush64b_empty : src/nondebug/libpmem/memset_t_avx512f.su:flush.h static
+8 flush64b_empty : src/nondebug/libpmem2/memset_t_avx.su:flush.h static
+8 flush64b_empty : src/nondebug/libpmem2/memset_t_avx512f.su:flush.h static
 8 fence_empty : src/nondebug/libpmem/pmem.su:pmem.c static
 8 debug_ctl_register : src/nondebug/libpmemobj/ctl_debug.su:ctl_debug.c static
 8 ctl__worker_read : src/nondebug/libpmemobj/tx.su:tx.c static
